--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -1,117 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Bluetooth"
-    >
+    tools:context=".Bluetooth">
 
-    <!--    page icon and title -->
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045"
-        app:srcCompat="@drawable/bluetooth" />
 
-    <TextView
-        android:id="@+id/sensorsTestTitle"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Bluetooth  Features Analysis"
-        android:textSize="25dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.262" />
+        android:layout_margin="10dp"
+        android:layout_marginTop="30dp">
+        <!-- TODO: Update blank fragment layout -->
 
 
-    <!--    main id section-->
-    <TextView
-        android:id="@+id/x_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="X Axis Value"
-        android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        <LinearLayout
+            android:layout_width="390dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".MainActivity2">
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:textAlignment="center" />
 
-        app:layout_constraintVertical_bias="0.418" />
+            <TextView
+                android:id="@+id/batteryTextHead"
+                android:layout_width="390dp"
+                android:layout_height="40dp"
+                android:text="Bluetooth"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textStyle="bold"
+                />
 
-    <TextView
-        android:id="@+id/y_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:width="140dp"
-        android:text="Y Axis Value"
-        android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/x_text_view"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.479" />
+            <TextView
+                android:id="@+id/bluetoothText"
+                android:layout_width="394dp"
+                android:layout_height="668dp"
+                android:paddingTop="5dp"
+                android:text="TextView"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.492" />
 
-    <TextView
-        android:id="@+id/z_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:width="140dp"
-        android:text="Z Axis Value"
-        android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        </LinearLayout>
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/y_text_view"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.534" />
+    </ScrollView>
 
-    <!--    Instruction -->
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="411dp"
-        android:layout_height="87dp"
-        android:background="@color/purple_200"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="Instruction: Move the device to get the updated Sensor Value."
-        android:textColor="@color/white"
-        android:textSize="22dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/openBluetoothSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="openBluetoothSettings"
-        android:text="Toggle Bluetooth"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.806" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
