--- a/app/src/main/res/layout/activity_sens_acceletro.xml
+++ b/app/src/main/res/layout/activity_sens_acceletro.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".SensAcceletro">
 
-    <!--    page icon and title -->
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:padding="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045"
-        app:srcCompat="@drawable/senacce" />
-
-
 
     <TextView
         android:id="@+id/sensorsTestTitle"
@@ -33,11 +18,20 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintVertical_bias="0.262" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.045"
+        app:srcCompat="@drawable/senacce" />
 
-    <!--    main id section-->
     <TextView
         android:id="@+id/x_text_view"
         android:layout_width="wrap_content"
@@ -45,8 +39,6 @@
         android:width="140dp"
         android:text="X Axis Value"
         android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -62,8 +54,6 @@
         android:width="140dp"
         android:text="Y Axis Value"
         android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/x_text_view"
         app:layout_constraintTop_toTopOf="parent"
@@ -76,14 +66,12 @@
         android:width="140dp"
         android:text="Z Axis Value"
         android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/y_text_view"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.534" />
 
-    <!--    Instruction -->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="411dp"
@@ -91,17 +79,15 @@
         android:background="@color/purple_200"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:text="Instruction: Move the device to get the updated Sensor Value."
+        android:text="Instruction: Keep moving the device to get the updated Accelerometer Sensor Axis Value."
         android:textColor="@color/white"
         android:textSize="22dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.996" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
