--- a/app/src/main/res/layout/activity_wifi.xml
+++ b/app/src/main/res/layout/activity_wifi.xml
@@ -7,32 +7,19 @@
     tools:context=".Wifi">
 
 
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045"
-        app:srcCompat="@drawable/wifi" />
-
     <TextView
         android:id="@+id/sensorsTestTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="WiFi Features Analysis"
+        android:text="Wi-Fi Accessibility Check"
+        android:textAlignment="center"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintVertical_bias="0.262" />
+        app:layout_constraintVertical_bias="0.113" />
 
     <TextView
         android:id="@+id/showWifiModule"
@@ -40,8 +27,6 @@
         android:layout_height="wrap_content"
         android:text="WiFi Module"
         android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/showWifiCondition"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,10 +36,8 @@
         android:id="@+id/showWifiState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="WiFi Status: On/Off"
+        android:text="WiFi Status: On"
         android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.441"
@@ -68,8 +51,6 @@
         android:layout_height="wrap_content"
         android:text="WiFi Condition"
         android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/showWifiState"
         app:layout_constraintTop_toTopOf="parent"
@@ -88,7 +69,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.806" />
 
-
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.241"
+        app:srcCompat="@drawable/wifi" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
